Fix Collector a toList() en algunos Streams